[gd_scene load_steps=4 format=3 uid="uid://baut5hxggjjs6"]

[ext_resource type="Script" path="res://gd/arow.gd" id="1_0fihq"]
[ext_resource type="Texture2D" uid="uid://bjo0dx0v7xr5" path="res://char/Arrow.png" id="2_va4mv"]

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_v4lt7"]
length = 53.3299

[node name="arow" type="RigidBody2D"]
script = ExtResource("1_0fihq")
speed = 350.0
lifespan = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_va4mv")
vframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-8, 1)
rotation = -1.58215
scale = Vector2(0.3, 0.3)
shape = SubResource("SeparationRayShape2D_v4lt7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="tree_exiting" from="Area2D" to="." method="_on_area_2d_tree_exiting"]
